# zb320

./: model.urdf
zb320_description/: CMakeLists.txt  package.xml
zb320_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
zb320_description/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl
zb320_description/urdf/: materials.xacro  model.gazebo  model.trans  model.urdf  model.xacro
zb320_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
zb320_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  zb320.srdf
zb320_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  zb320_moveit_controller_manager.launch.xml
zb320_moveit_control/: CMakeLists.txt  package.xml
zb320_moveit_control/launch/: move_goal.launch
zb320_moveit_control/src/: move_goal.cpp
